--- a/frontend/src/app/admin/articles/articles.component.html
+++ b/frontend/src/app/admin/articles/articles.component.html
@@ -1,7 +1,8 @@
 <br><br><br>
 <div *ngIf="!isAdmin">
+
 <div class="container mt-5" >
-    
+    <h5 class="my-0 mr-md-auto font-weight-normal"><strong>{{UserProfile?.company}}</strong></h5><br>
     <table class="table table-bordered">
         <thead>
             <th scope="col">ID</th>
